src/runboat/kubefiles/sphinx/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sphinx
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    name: sphinx
