src/runboat/kubefiles/sphinx/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sphinx
spec:
  rules:
    - http:
        paths:
          - pathType: ImplementationSpecific
            path: "/"
            backend:
              service:
                name: sphinx
                port:
                  name: http
